--- a/src/Component/FuncToJsone/ComponentFuncToJsone.css
+++ b/src/Component/FuncToJsone/ComponentFuncToJsone.css
@@ -12,7 +12,22 @@
   margin-left: 20px;
   font-weight: 500;
 }
+.title-text {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-weight: 400;
+}
+.title-text span {
+  font-weight: 500;
+}
+.title-tooltip {
+  display: block;
+  font-weight: 400 !important;
+  font-size: 12px;
+  margin-left: 10px;
+}
 .textarea-row {
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
 }
