--- a/src/Component/FuncToJsone/ComponentFuncToJsone.css
+++ b/src/Component/FuncToJsone/ComponentFuncToJsone.css
@@ -83,3 +83,38 @@
   border: 1px solid black;
   border-radius: 6px;
 }
+.controll-checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+.controll-checkbox + label {
+  display: flex;
+  align-items: center;
+  user-select: none;
+  margin-bottom: 7px;
+  margin-left: 7px;
+}
+.controll-checkbox + label::before {
+  content: "";
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  flex-shrink: 0;
+  flex-grow: 0;
+  border: 1px solid #adb5bd;
+  border-radius: 0.25em;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+.controll-checkbox:checked + label::before {
+  border-color: #0b76ef;
+  background-color: #0b76ef;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+.controll-checkbox-lable {
+  display: flex;
+  align-self: center;
+}
